# bytes

./: .hlint.yaml  .travis.yml  AUTHORS.markdown  CHANGELOG.markdown  Data-Bytes-Get.html  Data-Bytes-Put.html  Data-Bytes-Serial.html  Data-Bytes-Signed.html  Data-Bytes-VarInt.html  HLint.hs  README.markdown  Setup.lhs  bytes.cabal  bytes.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Bytes-Get.html  mini_Data-Bytes-Put.html  mini_Data-Bytes-Serial.html  mini_Data-Bytes-Signed.html  mini_Data-Bytes-VarInt.html
.github/workflows/: haskell-ci.yml
cbits/: i2d.c
src/: Data-Bytes-Get.html  Data-Bytes-Put.html  Data-Bytes-Serial.html  Data-Bytes-Signed.html  Data-Bytes-VarInt.html
src/Data/Bytes/: Get.hs  Put.hs  Serial.hs  Signed.hs  Unsigned.hs  VarInt.hs
tests/: doctests.hsc
