name:          bytes
category:      Data, Serialization
version:       0.15.0.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      https://github.com/ekmett/bytes
bug-reports:   https://github.com/ekmett/bytes/issues
copyright:     Copyright (C) 2013-2015 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.4.1, GHC == 7.6.1
synopsis:      Sharing code for serialization between binary and cereal
description:   Sharing code for serialization between binary and cereal

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/bytes.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  description: Enable (or disable via f-test-doctests) the doctest suite when
               using the enable-tests option for cabal.
  default: True
  manual: True

library
  build-depends:
    base                      >= 4.3      && < 5,
    binary                    >= 0.5.1    && < 0.8,
    bytestring                >= 0.9      && < 0.11,
    cereal                    >= 0.3.5    && < 0.5,
    containers                >= 0.3      && < 1,
    mtl                       >= 2.0      && < 2.3,
    text                      >= 0.2      && < 1.3,
    time                      >= 1.2      && < 1.6,
    transformers              >= 0.2      && < 0.5,
    transformers-compat       >= 0.3      && < 1,
    void                      >= 0.6      && < 1

  if impl(ghc >= 7.4 && < 7.6)
    build-depends: ghc-prim

  exposed-modules:
    Data.Bytes.Get
    Data.Bytes.Put
    Data.Bytes.Serial
    Data.Bytes.Signed
    Data.Bytes.VarInt

  ghc-options: -Wall -fwarn-tabs -O2
  c-sources: cbits/i2d.c
  hs-source-dirs: src

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      bytes,
      directory      >= 1.0,
      doctest        >= 0.9.1,
      filepath       >= 1.2
