name:          bytes
category:      Data, Serialization
version:       0.17.4
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      https://github.com/ekmett/bytes
bug-reports:   https://github.com/ekmett/bytes/issues
copyright:     Copyright (C) 2013-2015 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.6
             , GHC == 9.8.4
             , GHC == 9.10.1
             , GHC == 9.12.1
synopsis:      Sharing code for serialization between binary and cereal
description:   Sharing code for serialization between binary and cereal.

extra-source-files:
  .gitignore
  .hlint.yaml
  .vim.custom
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/bytes.git

library
  build-depends:
    base                      >= 4.9      && < 5,
    binary                    >= 0.5.1    && < 0.9,
    binary-orphans            >= 1.0.1    && < 1.1,
    bytestring                >= 0.9      && < 0.13,
    cereal                    >= 0.5.2    && < 0.6,
    containers                >= 0.3      && < 1,
    hashable                  >= 1.0.1.1  && < 1.6,
    text                      >= 0.2      && < 2.2,
    time                      >= 1.2      && < 1.13,
    transformers              >= 0.2      && < 0.7,
    transformers-compat       >= 0.6.5    && < 1,
    unordered-containers      >= 0.2      && < 0.3,
    scientific                >= 0.0      && < 1,
    void                      >= 0.6      && < 1

  exposed-modules:
    Data.Bytes.Get
    Data.Bytes.Put
    Data.Bytes.Serial
    Data.Bytes.Signed
    Data.Bytes.VarInt

  ghc-options: -Wall -Wtabs -O2
  if impl(ghc >= 8.6)
    ghc-options: -Wno-star-is-type
  c-sources: cbits/i2d.c
  hs-source-dirs: src
  default-language: Haskell2010
